mailhog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog-service
spec:
  selector:
    app: mailhog
  ports:
    - protocol: TCP
      port: 8025
      targetPort: 8025
