mailhog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mailrepo.labs.squareops.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog-service
                port:
                  number: 8025
